Corregido código smell